<resources>
    <string name="app_name">Ca$h Plan</string>
    <string name="home_page_text">This is the home page.</string>
    <string name="login_page_text">This is the login page.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="home_welcome">Welcome %1$s %2$s to your home page!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_message">Continue</string>
    <string name="email">Email</string>
    <string name="forgot_password_message">Enter the email address associated with your account and we will send you a link to reset your password.</string>
    <string name="email_sent_message"> If your account exists, we sent a link to your email. The link will expire after 15 minutes and if you don\'t see the email please check your spam folder.</string>
    <string name="finish">Finish</string>
    <string name="home">Home</string>
    <string name="expenses">Expenses</string>
    <string name="cash_flows">Cash Flows</string>
    <string name="investments">Investments</string>
    <string name="settings">Settings</string>
    <string name="profile">profile</string>
    <string name="view_profile">View Profile</string>
    <string name="log_out">Log Out</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="help_center">Help Center</string>
    <string name="community">Community</string>
    <string name="share">Share</string>
    <string name="write_review">Write Review</string>
    <string name="social_media">Social Media</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="snapchat">Snapchat</string>
    <string name="linkedin">LinkedIn</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="place_holder_name">Bob Ross</string>
    <string name="place_holder_email">bob.ross@example.com</string>
    <string name="selected_item">Selected item:</string>
    <string name="pie_legend">Pie Legend</string>
    <string name="technology_sector">technology sector</string>
    <string name="communication">Communication</string>
    <string name="communication_sector">communication sector</string>
    <string name="industrial">Industrial</string>
    <string name="industrial_sector">industrial sector</string>
    <string name="energy">Energy</string>
    <string name="energy_sector">energy sector</string>
    <string name="utility">Utility</string>
    <string name="utility_sector">utility sector</string>
    <string name="real_estate">Real Estate</string>
    <string name="real_estate_sector">real estate sector</string>
    <string name="material">Material</string>
    <string name="material_sector">material sector</string>
    <string name="healthcare">Healthcare</string>
    <string name="healthcare_sector">healthcare sector</string>
    <string name="consumer">Consumer</string>
    <string name="consumer_sector">consumer sector</string>
    <string name="finance">Finance</string>
    <string name="finance_sector">finance sector</string>
    <string name="technology">Technology</string>
    <string name="transactions">Transactions</string>
    <string name="sell_stock">Sell Stock</string>
    <string-array name="cash_flow_choices_array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="BTitle_Account">Account</string>
    <string name="BTitle_Customize">Customization</string>
    <string name="BTitle_Notifications">Notifications</string>
    <string name="Title_Permissions">Permissions</string>
    <string name="Template">Temp</string>
    <string name="Temp_Phone">123–456–7890</string>
    <string name="Temp_Email">JohnDoe@temp.com</string>
    <string name="Temp_BankName">Bank Name</string>
    <string name="Temp_CheckingName">Checking X4321</string>
    <string name="Temp_SavingsName">Savings X1234</string>
    <string name="Temp_AccntNum">*****4321</string>
    <string name="Temp_Title_StockApp">RobinHat</string>
    <string name="Temp_Title_CryptoApp">CubeChain</string>
    <string name="Title_FirstName">First Name:</string>
    <string name="Title_LastName">Last Name:</string>
    <string name="Title_PhoneNum">Phone Number:</string>
    <string name="Title_Email">Email:</string>
    <string name="Title_CheckingAccnt_Singlar">Checking Account</string>
    <string name="Title_SavingsAccnt">Savings Account</string>
    <string name="Title_Stocks">Stocks</string>
    <string name="Title_Cat_Prsnl">Personal Information</string>
    <string name="Title_Cat_Investments">Investments</string>
    <string name="All_Notif">All Notications</string>
    <string name="Spend_Update">Spending Updates</string>
    <string name="Daily_update">Daily Updates</string>
    <string name="fees">Fees</string>
    <string name="alerts">Alerts</string>
    <string name="customize">Customize</string>
    <string name="sound_and_vibration">Sound and Vibration</string>
    <string name="sounds">Sounds</string>
    <string name="vibration">Vibration</string>
    <string name="reminders">Reminders</string>
    <string name="sector">Sector:</string>
    <string name="drop_down_button">Drop Down button</string>
    <string name="amount">Amount:</string>
    <string name="price">Price:</string>
    <string name="buy_stock">Buy Stock</string>
    <string name="stock_symbol">Stock Symbol:</string>
    <string name="buy_investment">Buy Investment</string>
    <string name="back_button">Back Button</string>
    <string name="Title_Crypto">Cryptocurrency</string>
    <string name="Title_Cat_BankInfo">Banking</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="miscellaneous_sector">Miscellaneous Sector</string>
    <string name="recreation">Recreation</string>
    <string name="recreation_sector">Recreation Sector</string>
    <string name="personal">Personal</string>
    <string name="personal_sector">Personal Sector</string>
    <string name="savings">Savings</string>
    <string name="savings_section">Savings Section</string>
    <string name="medical">Medical</string>
    <string name="medical_section">Medical Section</string>
    <string name="insurance">Insurance</string>
    <string name="insurance_section">Insurance Section</string>
    <string name="utilities">Utilities</string>
    <string name="utilities_section">Utilities Section</string>
    <string name="food">Food</string>
    <string name="food_section">Food Section</string>
    <string name="transportation">Transportation</string>
    <string name="transportation_section">Transportation Section</string>
    <string name="housing">Housing</string>
    <string name="housing_section">Housing Section</string>
    <string name="stNotifChnl_id01">01 Remind</string>
    <string name="stNotifChnl_id02">02 Alarm</string>
    <string name="stNotifCatID">only group</string>
    <string name="alarms">Alarms</string>
    <string name="account_information">Account Information</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="payment">Payment</string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="monthly">Monthly</string>
    <string name="amount_">Amount:</string>
    <string name="deposits">Deposits</string>
    <string name="create_account_sign_up"><u>Sign Up</u></string>
</resources>