<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/topNavProfileCategory"
        android:title="@string/home">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/navProfileFragment"
                    android:icon="@drawable/user_profile_icon"
                    android:title="@string/view_profile" />

                <item
                    android:id="@+id/navHelpCenterFragment"
                    android:icon="@drawable/help_icon"
                    android:title="@string/help_center" />


                <item
                    android:id="@+id/navSettingFragment"
                    android:icon="@drawable/settings_icon"
                    android:title="@string/settings" />

                <item
                    android:id="@+id/navLogOut"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/log_out" />

            </group>

        </menu>

    </item>

    <item android:title="@string/community">

        <menu>

            <item
                android:id="@+id/navShare"
                android:icon="@drawable/share_icon"
                android:title="@string/share" />

            <item
                android:id="@+id/navWriteReview"
                android:icon="@drawable/write_review_icon"
                android:title="@string/write_review" />

        </menu>

    </item>

    <item android:title="@string/social_media">

        <menu>

            <item
                android:id="@+id/navFacebook"
                android:icon="@drawable/facebook_icon"
                android:title="@string/facebook" />

            <item
                android:id="@+id/navInstagram"
                android:icon="@drawable/instagram_icon"
                android:title="@string/instagram" />

            <item
                android:id="@+id/navSnapchat"
                android:icon="@drawable/snapchat_icon"
                android:title="@string/snapchat" />

            <item
                android:id="@+id/navLinkedIn"
                android:icon="@drawable/linkedin_icon"
                android:title="@string/linkedin" />
        </menu>

    </item>

</menu>